--- a/catalog.html
+++ b/catalog.html
@@ -226,6 +226,7 @@
                   </section>
               </div>
           </footer>
-            
+           
+          <script src="js/popup.js"></script>
     </body>
 </html>
