--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                       <a class="map btn" href="map.html">Как проехать</a>
                       <div class="map-popup">
                           <button class="popup-close" type="button" title="Закрыть">Закрыть</button>
-                          <div id="yandex-map"></div>
+                          <div class="google-map">
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705196!2d30.32088925190347!3d59.9387941817873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1474722860979" width="765" height="560" frameborder="0" style="border:0" allowfullscreen></iframe>
+                          </div>
                       </div>
                       <div class="popup-overlay"></div>
                       <a class="btn" href="#">Обратная связь</a>
@@ -155,6 +157,6 @@
         
           <script src="js/popup.js"></script>
           <script src="js/map.js"></script>
-          <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=T31BxLrbuctwZW6EEJ9ORcLx_tO8f2Fn&amp;width=765&amp;height=560&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true&id=yandex-map"></script>
+<!--          <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=T31BxLrbuctwZW6EEJ9ORcLx_tO8f2Fn&amp;width=765&amp;height=560&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true&id=yandex-map"></script>-->
     </body>
 </html>
