--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Магазин Барбершоп</title>
+    <title>Барбершоп - магазин</title>
     </head>
     <body class="secondary">
           
